# book

./: .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 33b7e5d7c1c7_book_table.py  dfbeba5caf13_create_book_table.py
src/crud/: book_crud.py
src/database/: db.py
src/models/: book_models.py
src/routes/: book_routes.py
src/schemas/: book_schemas.py
